crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_with_composables.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize_canon with croquis scopes
// ============================================

// ========== Vue Runtime Types ==========
import type {
  Ref,
  ComputedRef,
  UnwrapRef,
  Reactive,
  ShallowRef,
  WritableComputedRef,
} from 'vue';

import {
  ref,
  reactive,
  computed,
  watch,
  watchEffect,
  unref,
  toRef,
  toRefs,
  shallowRef,
  triggerRef,
  customRef,
  readonly,
  onMounted,
  onUnmounted,
  onBeforeMount,
  onBeforeUnmount,
  onUpdated,
  onBeforeUpdate,
  onActivated,
  onDeactivated,
  onErrorCaptured,
  nextTick,
  getCurrentInstance,
  inject,
  provide,
} from 'vue';

type MaybeRef<T> = T | Ref<T>;

// ========== Hoisted Imports ==========
import { useMouse } from '@vueuse/core'

// ========== Props Interface ==========
interface __VizeProps {}

// ========== Emits Interface ==========
interface __VizeEmits {}

// ========== Slots Interface ==========
interface __VizeSlots {
  [name: string]: ((props: Record<string, unknown>) => any) | undefined;
}

// ========== Generic Setup Function ==========
// Supports <script setup generic="T">
function __setup<
  __Props extends __VizeProps = __VizeProps,
  __Emits extends __VizeEmits = __VizeEmits,
  __Slots extends __VizeSlots = __VizeSlots,
>(
  __props: __Props,
  __ctx: {
    emit: __Emits;
    slots: __Slots;
    attrs: Record<string, unknown>;
    expose: (exposed?: Record<string, unknown>) => void;
  }
) {
  // ========== Script Setup Content ==========
  
  
  const { x, y } = useMouse()

  // ========== Template Function ==========
  function __template() {
    // Vue instance context (template-scoped)
    const $attrs = __ctx.attrs;
    const $slots = __ctx.slots;
    const $emit = __ctx.emit;
    const $refs: Record<string, any> = {};
    const $el: HTMLElement | undefined = undefined;

    // Script setup bindings (mark as used for unused detection)
    void useMouse;
    void x;
    void y;

  }

  // Component render return
  return __template;
}
