crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_with_props.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize_canon with croquis scopes
// ============================================

// ========== Vue Runtime Types ==========
import type {
  Ref,
  ComputedRef,
  UnwrapRef,
  Reactive,
  ShallowRef,
  WritableComputedRef,
} from 'vue';

import {
  ref,
  reactive,
  computed,
  watch,
  watchEffect,
  unref,
  toRef,
  toRefs,
  shallowRef,
  triggerRef,
  customRef,
  readonly,
  onMounted,
  onUnmounted,
  onBeforeMount,
  onBeforeUnmount,
  onUpdated,
  onBeforeUpdate,
  onActivated,
  onDeactivated,
  onErrorCaptured,
  nextTick,
  getCurrentInstance,
  inject,
  provide,
} from 'vue';

type MaybeRef<T> = T | Ref<T>;

// ========== Props Interface ==========
interface __VizeProps {}

// ========== Emits Interface ==========
interface __VizeEmits {}

// ========== Slots Interface ==========
interface __VizeSlots {
  [name: string]: ((props: Record<string, unknown>) => any) | undefined;
}

// ========== Generic Setup Function ==========
// Supports <script setup generic="T">
function __setup<
  __Props extends __VizeProps = __VizeProps,
  __Emits extends __VizeEmits = __VizeEmits,
  __Slots extends __VizeSlots = __VizeSlots,
>(
  __props: __Props,
  __ctx: {
    emit: __Emits;
    slots: __Slots;
    attrs: Record<string, unknown>;
    expose: (exposed?: Record<string, unknown>) => void;
  }
) {
  // ========== Script Setup Content ==========
  
  interface Props {
    title: string
    count?: number
  }
  
  const props = defineProps<Props>()

  // ========== Template Function ==========
  function __template() {
    // Vue instance context (template-scoped)
    const $attrs = __ctx.attrs;
    const $slots = __ctx.slots;
    const $emit = __ctx.emit;
    const $refs: Record<string, any> = {};
    const $el: HTMLElement | undefined = undefined;

    // Script setup bindings (mark as used for unused detection)
    void props;

  }

  // Component render return
  return __template;
}

// ========== Undefined Reference Errors ==========
function __undefinedReferenceErrors() {
  // @ts-expect-error TS2304: 'title' is not defined
  // Context: template expression @[151:156]
  void title;

  // @ts-expect-error TS2304: 'count' is not defined
  // Context: template expression @[176:181]
  void count;

  // @ts-expect-error TS2304: 'count' is not defined
  // Context: template expression @[205:210]
  void count;

}
